--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fintech | Origamid</title>
   </head>
-  <body class="text-color-2 bg-color-4">
+  <body class="font-sans text-brown-light bg-cream-secondary">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
